--- a/src/main/resources/static/css/headerIfooter.css
+++ b/src/main/resources/static/css/headerIfooter.css
@@ -474,3 +474,9 @@ body {
     text-decoration: none;
     color: inherit;
 }
+
+.First-Dish, .Main-Dish, .Salad, .Sauce, .Snack, .Pastry, .Drink, .Dessert {
+    width: 2.22vw;
+    height: 4vh;
+    left: 0.2vw;
+}
