fixed links on recipe on all list page and added state icons to notes on user page

--- a/src/main/resources/static/css/allLists.css
+++ b/src/main/resources/static/css/allLists.css
@@ -66,6 +66,12 @@
     width: 27vw;
     background-color: #FBEFC7;
     border-radius: 5vh;
+    text-decoration: none;
+    color: black;
+}
+
+.userRecipeField:hover {
+    border: 0.3vh solid #D8C89A;
 }
 
 .testForSwitch, .testForSwitch2 {
