--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -88,13 +88,13 @@
 
         <div class="text-form-category">
             <div class="recipeCategory">
-                <select name="recipeCategory">
-                    <option disabled selected value="">Choose category</option>
-                    <option th:each="categor : ${category}" th:text="${categor.getTitle()}"
+                <select th:field="*{recipeCategory}">
+                    <option th:each="categor : ${categorys}" th:text="${categor.title}"
                             th:value="${categor.title}"></option>
                 </select>
             </div>
         </div>
+
 
         <div class="ingredientsField">
             <div class="tableContainer">
@@ -234,6 +234,7 @@
             const recipeTitle = document.getElementById('recipeTitleInput').value.trim();
             const cookingTime = document.getElementById('cookingTimeInput').value.trim();
             const stepByStepInstructions = document.getElementById('recipeStepByStepInput').value.trim();
+            const selectedCategory = document.querySelector('select[name="recipeCategory"]').value;
 
             if (recipeTitle === "") {
                 alert("Please, enter a recipe title before saving.");
@@ -249,17 +250,13 @@
                 alert("Please, enter the step-by-step instructions before saving.");
                 event.preventDefault();
             }
+
+            console.log(`Selected category: "${selectedCategory}"`);
+            if (selectedCategory === "") {
+                alert("Please, choose a category of the recipe before saving.");
+                event.preventDefault();
+            }
         });
-    });
-
-    document.getElementById('save-btn').addEventListener('click', function (event) {
-        const selectedCategory = document.querySelector('select[name="recipeCategory"]').value;
-
-        console.log(`Selected category: "${selectedCategory}"`);
-        if (selectedCategory === "") {
-            alert("Please, choose a category of the recipe before saving.");
-            event.preventDefault();
-        }
     });
 
     document.getElementById("heart-btn").addEventListener("click",
