--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -38,7 +38,7 @@
                     <button th:class="${i.index == 0} ? 'recipe' : 'recipe' + i.index">
                         <div class="content-wrapper">
                             <div class="comment-user-circle">
-                                <img th:alt="${recipe.getCategory().getTitle()}"
+                                <img class="favIcons" th:alt="${recipe.getCategory().getTitle()}"
                                      th:class="${recipe.getCategory().getTitle().replace(' ', '-')}"
                                      th:if="${recipe}"
                                      th:src="@{'../images/' + ${recipe.getCategory().getTitle()} + '.svg'}">
