--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -48,7 +48,7 @@
                        th:href="@{/recipe/{id}(id=${recipe.getRecipe().getId()})}"
                        th:style="'top:' + (${i.index * 10 + 2}) + 'vh'">
                         <div class="content-wrapper">
-                            <img th:alt="${recipe.getRecipe().getCategory().getTitle()}"
+                            <img class="favIcons" th:alt="${recipe.getRecipe().getCategory().getTitle()}"
                                  th:if="${recipe}"
                                  th:src="@{'../images/' + ${recipe.getRecipe().getCategory().getTitle()} + '.svg'}">
 
