--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -49,7 +49,7 @@
                        th:href="@{/recipe/{id}(id=${recipe.getRecipe().getId()})}"
                        th:style="'top:' + (${i.index * 10 + 2}) + 'vh'">
                         <div class="content-wrapper">
-                            <img th:alt="${recipe.getRecipe().getCategory().getTitle()}"
+                            <img class="favIcons" th:alt="${recipe.getRecipe().getCategory().getTitle()}"
                                  th:if="${recipe}"
                                  th:src="@{'../images/' + ${recipe.getRecipe().getCategory().getTitle()} + '.svg'}">
 
@@ -210,14 +210,15 @@
             <p class="c7 devices">Devices tags</p>
         </div>
         <div class="ingredientContent">
-            <table>
-                <tr>
-                    <td th:each="devices: ${recipe.getRecipeDevices()}">
-                        <a th:href="@{/allRecipes(device=${devices.cookingDevice.getName()})}"
-                           th:text="'#' + ${devices.cookingDevice.getName()}"></a>
-                    </td>
-                </tr>
-            </table>
+            <!--            <table>-->
+            <!--                <tr>-->
+            <div th:each="devices: ${recipe.getRecipeDevices()}">
+                <a th:href="@{/allRecipes(device=${devices.cookingDevice.getName()})}"
+                   th:text="'#' + ${devices.cookingDevice.getName()}"></a>
+            </div>
+            <!--                    </td>-->
+            <!--                </tr>-->
+            <!--            </table>-->
         </div>
     </div>
     <form class="text-form" method="post" onsubmit="return validateInput('commentInput')"
@@ -245,7 +246,7 @@
             <div class="amountContent">
                 <table th:each="ingedients: ${recipe.getRecipeIngredients()}">
                     <tr>
-                        <td th:text="${ingedients.ingredient.getName()}"></td>
+                        <td class="names" th:text="${ingedients.ingredient.getName()}"></td>
                         <td th:text="' - '+${ingedients.getAmountOfIngredient()}"></td>
                     </tr>
                 </table>
@@ -305,7 +306,7 @@
             <form method="post" th:action="@{/api/newRating/{id1}(id1=${id})}" th:object="${rating}">
                 <input id="hidden-rating" name="mark" th:value="${rating.mark}" type="hidden"/>
                 <button class="confirmation" id="rate-btn">
-                    <img alt="quill" class="tick" src="../../images/tick.svg" th:src="@{../images/tick.svg}">
+                    <img alt="tick" class="tick" src="../../images/tick.svg" th:src="@{../images/tick.svg}">
                 </button>
             </form>
         </div>
