--- a/src/main/resources/templates/moderator/moderatorPage.html
+++ b/src/main/resources/templates/moderator/moderatorPage.html
@@ -50,12 +50,9 @@
     <div class="line">
         <div class="nikText">Moderator name</div>
     </div>
-    <a class="AIReport" href="moderatorAIReports.html" th:href="@{/moderator/AIReports}">Recipe publishing (AI)
-    </a>
-
+    <a class="AIReport" href="moderatorAIReports.html" th:href="@{/moderator/AIReports}">Recipe publishing</a>
     <a class="UserReport" href="moderatorUserReports.html" th:href="@{/moderator/UserReports}">User report</a>
-    <a class="returnB" href="../user/user.html" th:href="@{/user}">Return to the user account
-    </a>
+    <a class="returnB" href="../user/user.html" th:href="@{/user}">Return to the user account</a>
 </main>
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
