added some changes in text for moderator recipe publication page

--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -71,7 +71,7 @@
 </header>
 <body>
 <main>
-    <div class="titleForUserPage">AI reports</div>
+    <div class="titleForUserPage">Recipe publication requests</div>
     <div class="AIReportField">
         <div class="scrollField">
             <div th:each="report, i: ${reports}">
